# generator-angular-nickel

./: .travis.yml  README.md  package.json
app/: index.js
app/templates/: Cargo.toml  _bower.json  build.rs
app/templates/public/views/home/: _home.html
app/templates/src/: _main.rs  _main.rs.bak  _schema.in.rs  middleware.rs  schema.rs
entity/: index.js
entity/templates/migrations/: _up.sql
test/: test-creation.js  test-load.js
