[package]
name = "nickel-demo"
version = "0.1.0"
authors = ["Your name <you@example.com>"]
build = "build.rs"

[build-dependencies]
syntex = "^0.25.0"
diesel_codegen = "^0.4.0"
diesel = "*"
rustc-serialize = "*"

[dependencies]
diesel = "*"
nickel = "*"
r2d2= "*"
r2d2-diesel = "*"
plugin = "*"
typemap = "*"
rustc-serialize = "*"
